--- a/client/src/app/pages/people/people-search/people-search.component.scss
+++ b/client/src/app/pages/people/people-search/people-search.component.scss
@@ -65,8 +65,15 @@ a {
   position: sticky;
   padding: 20px;
   top: 80px;
-  height: 600px;
+  height: calc(100vh - 70px);
   padding-bottom: 120px;
+  overflow-y: scroll;
+  -ms-overflow-style: none;  // IE 10+
+  scrollbar-width: none;  // Firefox
+  
+  &::-webkit-scrollbar { 
+    display: none;  // Safari and Chrome
+  }
 
   .nav-title {
     height: 44px;
