--- a/client/src/app/pages/profile/create-profile/create-profile.component.html
+++ b/client/src/app/pages/profile/create-profile/create-profile.component.html
@@ -76,7 +76,11 @@
           (change)="onPhotoFileSelected($event)"
           #fileInput>
 
-        <img alt="Profile Image" src="{{basicInfoForm.get('photo').value || 'assets/icons/profile-image.svg'}}" (click)="fileInput.click()" >
+        <img alt="Profile Image" src="{{ photo_url || basicInfoForm.value.photo || 'assets/icons/no_photo.png'}}">
+        <img *ngIf="!photo_url" class="image-upload" alt="Upload Image" src="assets/icons/ic_image_upload.svg" (click)="fileInput.click()">
+        <div *ngIf="photo_url" class="image-loading">
+          <mat-spinner [diameter]="50"></mat-spinner>
+        </div>
       </div>
       <h3 class="profile-form__title">
         BASIC INFORMATION
