Better Fit for profile image

--- a/client/src/app/pages/people/people-search/people-search.component.scss
+++ b/client/src/app/pages/people/people-search/people-search.component.scss
@@ -224,6 +224,7 @@ a {
         width: 60px;
         height: 60px;
         border-radius: 50%;
+        object-fit: cover;
       }
 
       &.secondary {
