--- a/client/src/app/pages/positions/create-position/create-position.component.scss
+++ b/client/src/app/pages/positions/create-position/create-position.component.scss
@@ -199,6 +199,17 @@ p {
             }
           }
         }
+        p.headup {
+          width: 80%;
+          text-align: left;
+          font-family: 'Poppins-Regular', sans-serif;
+          font-weight: 400;
+          font-style: normal;
+          font-size: 14px;
+          line-height: 21px;
+          color: rgba(map-get($md-cfaccent, 500), .44);
+          margin-top: 15px;
+        }
       }
     }
   }
@@ -698,6 +709,9 @@ p {
               }
             }
           }
+          p.headup {
+            width: 90%;
+          }
         }
       }
     }
@@ -754,6 +768,9 @@ p {
                 height: 20px;
               }
             }
+          }
+          p.headup {
+            width: 95%;
           }
         }
       }
