Majors and Major Focus

--- a/client/src/app/pages/people/people-search/people-search.component.html
+++ b/client/src/app/pages/people/people-search/people-search.component.html
@@ -176,14 +176,14 @@
           </div>
         </div>
 
-        <div *ngIf="user.general_info.education && user.general_info.education.length > 0" class="skills-container">
-          <h5>Majors <span class="count">{{user.general_info.education.length}}</span></h5>
+        <div *ngIf="user.general_info.education && user.display_majors.length > 0" class="skills-container">
+          <h5>Majors <span class="count">{{user.display_majors.length}}</span></h5>
           <div class="skills" *ngIf="displayItemsLimit; let limit">
-            <ng-container *ngFor="let education of user.general_info.education; let j = index;">
-              <simple-tag *ngIf="j < limit" type="gray" [title]="education.major_name"></simple-tag>
+            <ng-container *ngFor="let educationName of user.display_majors; let j = index;">
+              <simple-tag *ngIf="j < limit" type="gray" [title]="educationName"></simple-tag>
             </ng-container>
             <img *ngIf="limit > displayItemsLimit" (click)="limit = limit - displayItemsLimit" src="assets/icons/ic_see_less.svg" alt="See Less">
-            <img *ngIf="limit < user.general_info.education.length" (click)="limit = limit + displayItemsLimit" src="assets/icons/ic_see_more.svg" alt="See More">
+            <img *ngIf="limit < user.display_majors.length" (click)="limit = limit + displayItemsLimit" src="assets/icons/ic_see_more.svg" alt="See More">
           </div>
         </div>
 
